--- a/etc/skel/.config/polybar/colorblocks/colors.ini
+++ b/etc/skel/.config/polybar/colorblocks/colors.ini
@@ -12,19 +12,19 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #0F0F13
-foreground = #0F0F13
-foreground-alt = #cbc9be
+background = #04142D
+foreground = #04142D
+foreground-alt = #d7d2ce
 alpha = #00000000
 
 ;; shades
-shade1 = #916A5D
-shade2 = #5B8E69
-shade3 = #916A5D
-shade4 = #5B8E69
-shade5 = #916A5D
-shade6 = #5B8E69
-shade7 = #916A5D
-shade8 = #5B8E69
+shade1 = #EAB079
+shade2 = #1F6D8B
+shade3 = #EAB079
+shade4 = #1F6D8B
+shade5 = #EAB079
+shade6 = #1F6D8B
+shade7 = #EAB079
+shade8 = #1F6D8B
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
