--- a/etc/skel/.config/polybar/shades/colors.ini
+++ b/etc/skel/.config/polybar/shades/colors.ini
@@ -17,13 +17,13 @@ foreground = #FFFFFF
 foreground-alt = #656565
 
 ;; shades
-shade1 = #006064
-shade2 = #00838F
-shade3 = #0097A7
-shade4 = #00ACC1
-shade5 = #00BCD4
-shade6 = #26C6DA
-shade7 = #4DD0E1
-shade8 = #80DEEA
+shade1 = #311B92
+shade2 = #4527A0
+shade3 = #512DA8
+shade4 = #5E35B1
+shade5 = #673AB7
+shade6 = #7E57C2
+shade7 = #9575CD
+shade8 = #B39DDB
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
