--- a/etc/skel/.config/polybar/shapes/colors.ini
+++ b/etc/skel/.config/polybar/shapes/colors.ini
@@ -12,18 +12,18 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #0F0F13
-foreground = #cbc9be
-foreground-alt = #cbc9be
+background = #04062F
+foreground = #f1d1d7
+foreground-alt = #f1d1d7
 
 ;; shades
-shade1 = #916A5D
-shade2 = #5B8E69
-shade3 = #916A5D
-shade4 = #5B8E69
-shade5 = #916A5D
-shade6 = #5B8E69
-shade7 = #916A5D
-shade8 = #cbc9be
+shade1 = #853D6F
+shade2 = #9A4878
+shade3 = #853D6F
+shade4 = #9A4878
+shade5 = #853D6F
+shade6 = #9A4878
+shade7 = #853D6F
+shade8 = #f1d1d7
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
