--- a/etc/skel/.config/polybar/material/colors.ini
+++ b/etc/skel/.config/polybar/material/colors.ini
@@ -12,12 +12,12 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #0F0F13
-foreground = #cbc9be
-foreground-alt = #8e8c85
+background = #04062F
+foreground = #f1d1d7
+foreground-alt = #a89296
 module-fg = #F5F5F5
-primary = #916A5D
-secondary = #5B8E69
-alternate = #9C906F
+primary = #853D6F
+secondary = #9A4878
+alternate = #C6977D
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
