--- a/etc/skel/.config/polybar/shapes/glyphs.ini
+++ b/etc/skel/.config/polybar/shapes/glyphs.ini
@@ -76,4 +76,11 @@ content-foreground = ${color.shade7}
 content = ${glyph.gright}
 content-font = 2
 
+
+[module/right8]
+type = custom/text
+content-background = ${color.background}
+content-foreground = ${color.shade7}
+content = ${glyph.gright}
+content-font = 2
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
