--- a/etc/skel/.config/polybar/blocks/modules.ini
+++ b/etc/skel/.config/polybar/blocks/modules.ini
@@ -46,7 +46,7 @@ master-mixer = Master
 
 ; Interval for volume increase/decrease (in percent points)
 ; Default: 5
-interval = 5
+interval = 1
 
 ; Available tags:
 ;   <label-volume> (default)
@@ -1141,8 +1141,8 @@ enable-scroll = true
 ; NOTE: The desktop name needs to match the name configured by the WM
 ; You can get a list of the defined desktops using:
 ; $ xprop -root _NET_DESKTOP_NAMES
-icon-0 = 1;
-icon-1 = 2;
+icon-0 = 1;
+icon-1 = 2;
 icon-2 = 3;
 icon-3 = 4;
 icon-4 = 5;
@@ -1151,7 +1151,7 @@ icon-6 = 7;
 icon-7 = 8;
 icon-8 = 9;
 icon-9 = 10;
-icon-default = 
+;icon-default = 
 
 ; Available tags:
 ;   <label-monitor>
