--- a/etc/skel/.config/polybar/material/colors.ini
+++ b/etc/skel/.config/polybar/material/colors.ini
@@ -12,12 +12,12 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #04062F
-foreground = #f1d1d7
-foreground-alt = #a89296
+background = #0E242D
+foreground = #e0d5d3
+foreground-alt = #9c9593
 module-fg = #F5F5F5
-primary = #853D6F
-secondary = #9A4878
-alternate = #C6977D
+primary = #245894
+secondary = #2E5AAA
+alternate = #5B6698
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
