--- a/etc/skel/.config/polybar/blocks/config.ini
+++ b/etc/skel/.config/polybar/blocks/config.ini
@@ -127,7 +127,7 @@ module-margin-right = 0
 ;   font-0 = NotoSans-Regular:size=8;2
 ;   font-1 = MaterialIcons:size=10
 ;   font-2 = Termsynu:size=8;-1
-;   font-3 = FontAwesome:size=10
+    font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
 font-0 = "Iosevka Nerd Font:size=10;4"
