--- a/etc/skel/.config/polybar/forest/user_modules.ini
+++ b/etc/skel/.config/polybar/forest/user_modules.ini
@@ -129,8 +129,8 @@ click-right = pcmanfm &
 inherit = module/apps
 content = 
 content-foreground = ${color.orange}
-click-left = firefox &
-click-right = chromium &
+click-left = opera &
+click-right = firefox &
 
 [module/settings]
 inherit = module/apps
