--- a/etc/skel/.config/polybar/forest/config.ini
+++ b/etc/skel/.config/polybar/forest/config.ini
@@ -139,9 +139,9 @@ font-2 = "feather:size=12;3"
 ;   modules-center = xwindow xbacklight
 ;   modules-right = ipc clock
 
-modules-left = launcher sep workspaces sep cpu memory filesystem
+modules-left = launcher sep workspaces sep term sep files sep browser sep settings sep cpu memory filesystem
 modules-center = mpd sep date
-modules-right = battery network sep volume brightness sep sysmenu
+modules-right = network sep volume brightness sep color-switch sep updates sep sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
@@ -170,7 +170,7 @@ locale =
 ;   center
 ;   right
 ;   none
-tray-position = none
+tray-position = right
 
 ; If true, the bar will not shift its
 ; contents when the tray changes
