--- a/etc/skel/.config/polybar/forest/user_modules.ini
+++ b/etc/skel/.config/polybar/forest/user_modules.ini
@@ -65,7 +65,7 @@ click-right = exo-open --launch TerminalEmulator &
 [module/launcher]
 type = custom/text
 
-content = 
+content = 
 content-foreground = ${color.purple}
 
 ; "click-(left|middle|right)" will be executed using "/usr/bin/env sh -c $COMMAND"
@@ -127,10 +127,10 @@ click-right = pcmanfm &
 
 [module/browser]
 inherit = module/apps
-content = 
+content = 
 content-foreground = ${color.orange}
-click-left = firefox &
-click-right = chromium &
+click-left = opera &
+click-right = firefox &
 
 [module/settings]
 inherit = module/apps
@@ -230,7 +230,7 @@ menu-0-3-exec = firefox &
 
 format = <label-toggle><menu>
 
-label-open = 
+label-open = 
 label-open-foreground = ${color.yellow}
 label-open-padding = 1
 label-close =  
