--- a/etc/skel/.config/polybar/material/colors.ini
+++ b/etc/skel/.config/polybar/material/colors.ini
@@ -12,12 +12,12 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #0F0F13
-foreground = #cbc9be
-foreground-alt = #8e8c85
+background = #0c0c0d
+foreground = #eec7cc
+foreground-alt = #a68b8e
 module-fg = #F5F5F5
-primary = #916A5D
-secondary = #5B8E69
-alternate = #9C906F
+primary = #9F1B37
+secondary = #D6113A
+alternate = #E21745
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
