--- a/etc/skel/.config/polybar/blocks/config.ini
+++ b/etc/skel/.config/polybar/blocks/config.ini
@@ -127,11 +127,12 @@ module-margin-right = 0
 ;   font-0 = NotoSans-Regular:size=8;2
 ;   font-1 = MaterialIcons:size=10
 ;   font-2 = Termsynu:size=8;-1
-;   font-3 = FontAwesome:size=10
+    font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
 font-0 = "Iosevka Nerd Font:size=10;4"
 font-1 = "feather:size=10;3"
+font-2 = FontAwesome:size=10
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
@@ -140,7 +141,7 @@ font-1 = "feather:size=10;3"
 
 modules-left = sep launcher sep workspaces sep term sep files sep browser sep settings sep moc
 modules-center = title
-modules-right = sep filesystem sep memory sep cpu sep color-switch sep alsa sep battery sep network sep date sep updates sep sysmenu sep
+modules-right = sep filesystem sep memory sep cpu sep color-switch sep alsa sep battery sep network sep date sep updates sep sysmenu
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
