--- a/etc/skel/.config/polybar/forest/modules.ini
+++ b/etc/skel/.config/polybar/forest/modules.ini
@@ -404,7 +404,7 @@ type = internal/fs
 
 ; Mountpoints to display
 mount-0 = /
-;;mount-1 = /home
+mount-1 = /home
 ;;mount-2 = /var
 
 ; Seconds to sleep between updates
@@ -751,7 +751,7 @@ toggle-off-foreground = ${color.red}
 ; If you use both a wired and a wireless network, just add 2 module definitions. For example
 [module/wired-network]
 type = internal/network
-interface = eth0
+interface = enp37s0
 
 [module/wireless-network]
 type = internal/network
@@ -760,7 +760,8 @@ interface = wlp3s0
 ; Normal Module
 [module/network]
 type = internal/network
-interface = wlan0
+interface = enp37s0
+
 
 ; Seconds to sleep between updates
 ; Default: 1
@@ -816,7 +817,7 @@ format-disconnected-prefix-foreground = ${color.orange}
 ;   %downspeed% [wireless+wired]
 ;   %linkspeed% [wired]
 ; Default: %ifname% %local_ip%
-label-connected = "%{A1:networkmanager_dmenu &:} %essid% %{F#6C77BB}%{F-} %downspeed%%{A}"
+label-connected = "%{A1:networkmanager_dmenu &:} %{F#6C77BB}%{F-} %downspeed%%{A}"
 
 ; Available tokens:
 ;   %ifname%    [wireless+wired]
@@ -1038,7 +1039,7 @@ icon-1 = 2;
 icon-2 = 3;
 icon-3 = 4;
 icon-4 = 5;
-icon-default = 
+;icon-default = 
 
 ; Available tags:
 ;   <label-monitor>
