--- a/etc/skel/.config/polybar/shapes/colors.ini
+++ b/etc/skel/.config/polybar/shapes/colors.ini
@@ -12,18 +12,18 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #04062F
-foreground = #f1d1d7
-foreground-alt = #f1d1d7
+background = #03020E
+foreground = #91cfef
+foreground-alt = #91cfef
 
 ;; shades
-shade1 = #853D6F
-shade2 = #9A4878
-shade3 = #853D6F
-shade4 = #9A4878
-shade5 = #853D6F
-shade6 = #9A4878
-shade7 = #853D6F
-shade8 = #f1d1d7
+shade1 = #C0695D
+shade2 = #1D2397
+shade3 = #C0695D
+shade4 = #1D2397
+shade5 = #C0695D
+shade6 = #1D2397
+shade7 = #C0695D
+shade8 = #91cfef
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
