--- a/etc/skel/.config/polybar/shapes/colors.ini
+++ b/etc/skel/.config/polybar/shapes/colors.ini
@@ -12,18 +12,18 @@
 ;; Use pywal.sh in scripts directory to use colors from an image/wallpaper.
 
 ;; main colors
-background = #03020E
-foreground = #91cfef
-foreground-alt = #91cfef
+background = #030C14
+foreground = #81e0e4
+foreground-alt = #81e0e4
 
 ;; shades
-shade1 = #C0695D
-shade2 = #1D2397
-shade3 = #C0695D
-shade4 = #1D2397
-shade5 = #C0695D
-shade6 = #1D2397
-shade7 = #C0695D
-shade8 = #91cfef
+shade1 = #10596B
+shade2 = #BF4B3C
+shade3 = #10596B
+shade4 = #BF4B3C
+shade5 = #10596B
+shade6 = #BF4B3C
+shade7 = #10596B
+shade8 = #81e0e4
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
