--- a/etc/skel/.config/polybar/config
+++ b/etc/skel/.config/polybar/config
@@ -426,7 +426,7 @@ interval = 1000
 label = Updates: %output%
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
-format-prefix = ""
+format-prefix = "賓"
 format-prefix-foreground = ${colors.foreground}
 
 
@@ -457,7 +457,7 @@ format-background = ${colors.background}
 
 ;[module/discord]
 ;type = custom/script
-;exec = echo "  Discord"
+;exec = echo " ﭮ Discord"
 ;;exec = echo " "
 ;interval = 1
 ;tail = true
@@ -475,7 +475,7 @@ type = custom/menu
 
 format-spacing = 1
 
-label-open = 
+label-open = 
 label-close = 
 label-close-foreground = ${colors.foreground}
 label-separator = |
@@ -880,7 +880,7 @@ click-right = brave &
 
 [module/email]
 inherit = module/apps
-content = 
+content = 
 content-foreground = ${color.orange}
 click-left = thunderbird &
 
@@ -900,7 +900,7 @@ click-right = lxappearance &
 
 [module/screenshot]
 inherit = module/apps
-content = 
+content = 
 click-left = flameshot gui &
 ;; click-right = gnome-screenshot -i &
 click-right = xfce4-screenshooter &
