--- a/etc/skel/.config/polybar/config
+++ b/etc/skel/.config/polybar/config
@@ -117,9 +117,9 @@ font-2 = "Noto Sans Mono:size=15;4"
 font-3 = "Bitstream Vera Sans:style=Roman:size=15;4"
 font-4 = "Iosevka:size=15;4"
 
-modules-left = jgmenu wall browser email files settings screenshot term ewmh
+modules-left = jgmenu wall browser discord email files settings screenshot term ewmh
 modules-center = cpu-graph mpd
-modules-right =  discord volume memory1 filesystem arch-aur-updates battery date  weather sysmenu
+modules-right = volume memory1 filesystem arch-aur-updates battery date  weather sysmenu
 
 ;tray-detached = false
 ;tray-offset-x = 0
